# DesignPatterns

./: CMakeLists.txt  Factory.h  README.md  main.cpp  singleton.hpp
